--- a/edit-user-app-vue3/package.json
+++ b/edit-user-app-vue3/package.json
@@ -7,18 +7,26 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "vue": "^3.4.0"
+    "vue": "^3.5.17"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
+    "@types/node": "^18.0.0",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-env": "^1.18.8",
+    "@vue/compiler-sfc": "^3.5.17",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
-    "vue-loader": "^17.2.2",
-    "webpack": "^5.91.0",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "vue-loader": "^17.4.2",
+    "vue-tsc": "^1.8.27",
+    "webpack": "^5.100.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.2"
   }
 }
