--- a/shell-vue2/package.json
+++ b/shell-vue2/package.json
@@ -7,7 +7,9 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "vue": "^2.7.0"
+    "vue": "^2.7.0",
+    "vue-i18n": "^8.28.2",
+    "vue-router": "^3.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
