--- a/shell-vue2/package.json
+++ b/shell-vue2/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^3.3.3",
     "vue-loader": "^15.10.1",
     "vue-template-compiler": "^2.7.0",
