--- a/users-app-vue3/package.json
+++ b/users-app-vue3/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
