--- a/users-app-vue3/package.json
+++ b/users-app-vue3/package.json
@@ -4,7 +4,8 @@
   "description": "Vue 3 Remote App exposing Web Component via Module Federation",
   "scripts": {
     "serve": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.17"
@@ -18,6 +19,7 @@
     "@vue/compiler-sfc": "^3.5.17",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^3.3.3",
