--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "install:remote1": "cd users-app-vue3 && npm install",
     "install:remote2": "cd edit-user-app-vue3 && npm install",
     "install:shell": "cd shell-vue2 && npm install",
-    "install:all": "npm run install:remote1 && npm run install:remote2 && npm run install:shell",
+    "install:all": "npm install && run install:remote1 && npm run install:remote2 && npm run install:shell",
     "dev:remote1": "cd users-app-vue3 && npm run dev",
     "dev:remote2": "cd edit-user-app-vue3 && npm run dev",
     "dev:shell": "cd shell-vue2 && npm run dev",
     "dev": "concurrently \"npm run dev:remote1\" \"npm run dev:remote2\" \"npm run dev:shell\"",
-    "build:remote1": "cd users-app-vue3 && npm run build",
-    "build:remote2": "cd edit-user-app-vue3 && npm run build",
-    "build:shell": "cd shell-vue2 && npm run build",
-    "build": "npm run build:remote1 && npm run build:remote2 && npm run build:shell",
+    "build:remote1": "cd users-app-vue3 && npm run build && serve -s dist -l 8081",
+    "build:remote2": "cd edit-user-app-vue3 && npm run build && serve -s dist -l 8082",
+    "build:shell": "cd shell-vue2 && npm run build && serve -s dist -l 8080",
+    "build": "concurrently \"npm run build:remote1\" \"npm run build:remote2\" \"npm run build:shell\"",
     "copy:dist": "mkdirp dist && copyfiles -u 1 \"users-app-vue3/dist/**/*\" dist/users-app-vue3 && copyfiles -u 1 \"edit-user-app-vue3/dist/**/*\" dist/edit-user-app-vue3 && copyfiles -u 1 \"shell-vue2/dist/**/*\" dist/shell-vue2",
     "deploy": "gh-pages -d dist",
     "deploy:all": "npm run clean && npm install && npm run install:all && npm run build && npm run copy:dist && npm run deploy"
