--- a/users-app-vue3/package.json
+++ b/users-app-vue3/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Vue 3 Remote App exposing Web Component via Module Federation",
   "scripts": {
-    "serve": "webpack serve --mode development",
+    "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "deploy": "gh-pages -d dist"
   },
